core-engine/kubernetes/core-engine.service.yml
apiVersion: v1
kind: Service
metadata:
  name: core-engine-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
      targetPort: 80
      protocol: TCP
  selector:
    app: core-engine
