core-engine/kubernetes/glitchtip.service.yml
apiVersion: apps/v1
kind: Service
metadata:
  name: glitchtip
spec:
  selector:
    app: glitchtip
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: glitchtip
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: glitchtip
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
