core-engine/kubernetes/glitchtip.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glitchtip-ingress
  namespace: pet-via-adv-da-ba23
spec:
  rules:
    - host: monitor-swiss-ai-center.kube.isc.heia-fr.ch
      http:
        paths:
          - backend:
              service:
                name: glitchtip
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - monitor-swiss-ai-center.kube.isc.heia-fr.ch
